2009-05-22:
===========

- Performance test12 is finally working very well in the default Gecko-based 
browser on the XO. Yay!

Thanks go to Robert O'Callahan (roc) from Mozilla for his valuable information 
on how Gecko renders pages. Also, thanks to my mentor, Martin Langhoff, for 
finding the Gecko patches applied on the XO.

This work will be integrated into PaintWeb.

- Added zoom level detection for Opera in performance test12, which semi-works.  
Detection of the zoom level is sufficiently accurate, yet, Opera doesn't always 
cancel the scaling. For zoom 200% scaling is cancelled and performance is good.


2009-05-21:
===========

- Minor fixes for line, pencil, ellipse and eraser.
- Curve tool: performance work, bug fixes and usability improvements.
- Two new strings in lang/en.json for the curve tool.

2009-05-20:
===========

- Some minor bug fixes.
- New perf test12, for the XO. Thanks to the suggestions provided by roc from 
Mozilla!

2009-05-17:
===========

- More code organization work.
- More performance work and bug fixes.
- Performance improvements for the following drawing tools: rectangle, ellipse 
and line.
- Further adjustment to the pencil and eraser tools. For example, now you can 
press Escape to cancel the drawing operation.
- Added new option to config: toolDrawDelay.

2009-05-13:
===========

- Performance testing on the OLPC XO-1 laptop. Check tests/gsoc2009/0001-perf.
- Improved the performance of the pencil and of the eraser drawing tools.
- Improved performance of ev_keyboard and ev_canvas.
- Improved performance of the MouseKeys extension.

2009-05-08:
===========

- The MouseKeys extension is now working.
- The extension now fires the 'click' event as well, and it allows a second way 
of handling mouse button events. Instead of button toggling with a key press.  
Now one can simulate holding down the mouse button by holding down a key. See 
action 'ButtonClick'.