@@ -17,7 +17,7 @@
  * along with PaintWeb.  If not, see <http://www.gnu.org/licenses/>.
  *
  * $URL: http://code.google.com/p/paintweb $
- * $Date: 2009-05-08 15:36:10 +0300 $
+ * $Date: 2009-05-23 14:05:17 +0300 $
  */
 
 body {
@@ -38,6 +38,32 @@ label
   visibility: hidden;
   height: 0;
   clear: both;
+}
+
+@media screen and (resolution: 96dpi) {
+  #resInfo { width: 96px }
+}
+
+@media screen and (resolution: 134dpi) {
+  #resInfo { width: 134px }
+}
+
+@media screen and (resolution: 200dpi) {
+  #resInfo { width: 200px }
+}
+
+@media screen and (resolution: 300dpi) {
+  #resInfo { width: 300px }
+}
+
+#resInfo {
+  display: block;
+  height: 100%;
+  left: -3000px;
+  position: fixed;
+  top: 0;
+  visibility: hidden;
+  z-index: -32;
 }
 
 /* Tool bar */
