@@ -7,9 +7,10 @@
     title="Marius and Mihai Şucan, ROBO Design">
     <link rel="stylesheet" type="text/css" href="paintweb.css">
     <!-- $URL: http://code.google.com/p/paintweb $
-         $Date: 2009-05-17 13:53:35 +0300 $ -->
+         $Date: 2009-05-23 14:05:39 +0300 $ -->
   </head>
   <body>
+    <div id="resInfo"></div>
 
     <div id="toolbar">
       <h1>Tools</h1>
