@@ -2,7 +2,7 @@
  * © 2009 ROBO Design
  * http://www.robodesign.ro
  *
- * $Date: 2009-05-22 21:37:07 +0300 $
+ * $Date: 2009-05-23 20:43:34 +0300 $
  */
 
 function tool_pencil (app) {
@@ -103,18 +103,29 @@ var PaintWebInstance = new (function () {
         height = parseInt(cs.height),
         scale = 1;
 
-    if (window.opera) {
-      scale = window.innerHeight / height;
-      scale = Math.round(scale * 10) / 10;
-      console.log('scale ' + scale + ' innerHeight ' + window.innerHeight +
+    if (_self.win.opera) {
+      // Opera zoom level detection.
+      // The scaling factor is sufficiently accurate for zoom levels between 
+      // 100% and 200% (in steps of 10%).
+
+      scale = _self.win.innerHeight / height;
+      scale = MathRound(scale * 10) / 10;
+
+      console.log('scale ' + scale + ' innerHeight ' + _self.win.innerHeight +
           ' height ' + height);
 
     } else if (width && !isNaN(width) && width != dpiOptimal) {
+      // Page DPI detection. This only works in Gecko 1.9.1.
+
       dpiLocal = width;
+
+      // The scaling factor is the same as in Gecko.
       scale = Math.floor(dpiLocal / dpiOptimal);
       console.log('dpiLocal ' + dpiLocal + ' scale ' + scale);
 
-    } else if (window.navigator.userAgent.indexOf('olpc') != -1) {
+    } else if (_self.win.navigator.userAgent.indexOf('olpc') != -1) {
+      // Support for the default Gecko included on the OLPC XO-1 system.
+      //
       // See:
       // http://mxr.mozilla.org/mozilla-central/source/gfx/src/thebes/nsThebesDeviceContext.cpp#725
       // dotsArePixels = false on the XO due to a hard-coded patch.
@@ -123,8 +134,10 @@ var PaintWebInstance = new (function () {
       var appUnitsPerCSSPixel = 60;
       var devPixelsPerCSSPixel = dpiLocal / dpiOptimal;
       var appUnitsPerDevPixel = appUnitsPerCSSPixel / devPixelsPerCSSPixel;
+
       scale = appUnitsPerCSSPixel / Math.floor(appUnitsPerDevPixel);
-      console.log('dpiLocal ' + dpiLocl + ' scale ' + scale +
+
+      console.log('dpiLocal ' + dpiLocal + ' scale ' + scale +
           ' devPixelsPerCSSPixel ' + devPixelsPerCSSPixel +
           ' appUnitsPerDevPixel ' + appUnitsPerDevPixel);
     }
@@ -135,8 +148,8 @@ var PaintWebInstance = new (function () {
       var sw = canvas.width  / scale;
           sh = canvas.height / scale;
 
-      console.log('w ' + canvas.width + ' h ' + canvas.height + ' sw ' + sw 
-          + ' sh ' + sh);
+      console.log('w ' + canvas.width + ' h ' + canvas.height + ' sw ' + sw +
+          ' sh ' + sh);
 
       canvas.style.width  = sw + 'px';
       canvas.style.height = sh + 'px';
